--- a/src/web/index.html
+++ b/src/web/index.html
@@ -38,20 +38,30 @@
         <form id="reportImage" enctype="multipart/form-data" method="POST">
           <div class="drop-zone">
             <div class="drop-zone__prompt">Drop image here / click to upload</div>
-            <input type="file" name="imagereport" class="drop-zone__input" id="reportFile" />
+            <input type="file" name="imagereport" class="drop-zone__input" id="reportFile">
           </div>
           <div id = "compressionSlider">
-            <label for="compressionrate">Compression Rate (%) :</label>
-            <input type="range" min="1" max="100" value="50" class="compressionrate" id="slider">
-            <p>Value: <span id="rateShow"></span></p>
+            <!-- <label for="compressionrate">Compression Rate :</label> -->
+            <input type="range" min="0" max="100" value="0" class="compressionrate" id="reportCompression">
+            <p>Compression Rate : <span id="rateShow"></span> %</p>
           </div>
-            
-            <button type="submit" form="reportImage" data-bs-toggle="modal" data-bs-target="#terimakasih">Upload</button>
+            <button type="submit" form="reportImage" data-bs-toggle="modal" data-bs-target="#submitted" id = "upload-button">Upload</button>
         </form>
       </div>
     </div>
 
     <div id="terimakasih" class="modal fade" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-container modal-content">
+          <p>Please insert image!</p>
+          <div>
+            <button id="Kembali" class="button-scan" data-bs-dismiss="modal">Back</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="submitted" class="modal fade" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-container modal-content">
           <p>Image Successfully Uploaded!</p>
@@ -61,17 +71,38 @@
         </div>
       </div>
     </div>
+    <br>
 
-    <div id = "result">
-      <!-- <h2>Compression Result</h2> -->
+    <button id = "show-button">Toggle Show Result</button>
+
+    <div id="compression-result">
+
+      <div class="row">
+        <div class="column">
+          <h2>Original</h2>
+        </div>
+        <div class="column">
+          <h1><span id = "perc"></span></h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          <img src="weblogo.png" alt="Before" style="width:50%" id = "before-image">
+        </div>
+        <div class="column">
+          <img src="weblogo.png" alt="After" style="width:50%" id = "after-image">
+        </div>
+      </div>
+
     </div>
 
     <script src="index.js"></script> <!-- BAGIAN JS BELOM-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script>
-      var slider = document.getElementById("slider");
+      var slider = document.getElementById("reportCompression");
       var output = document.getElementById("rateShow");
-      output.innerHTML = slider.value; 
+      output.innerHTML = slider.value ; 
 
       slider.oninput = function() {
         output.innerHTML = this.value;
