Adding image download

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -101,8 +101,12 @@
       </div>
 
     </div>
+    <div id = "download-button">
+      <button id = "download">Download Result</button>
+    </div>
 
     <script src="index.js"></script> <!-- BAGIAN JS BELOM-->
+    <script src="FileSaver.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script>
       var slider = document.getElementById("reportCompression");
